--- a/index.html
+++ b/index.html
@@ -1,121 +1,226 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>¿Quieres ser mi San Valentín?</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>San Valentín Interactivo</title>
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+<style>
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 
-    body {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: url('https://share.google/M3dPUFTSPfRbb260C') no-repeat center center/cover;
-      overflow: hidden;
-    }
+body {
+  /* 👉 AQUÍ va tu imagen real */
+  background: url("IMG-20260205-WA0006.jpg") no-repeat center center fixed;
+  background-size: cover;
+}
 
-    .card {
-      background: rgba(255, 255, 255, 0.9);
-      padding: 30px 25px;
-      border-radius: 25px;
-      text-align: center;
-      width: 90%;
-      max-width: 340px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-      transition: all 0.3s ease;
-    }
+body::before {
+  content: "";
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(255,192,203,0.5);
+}
 
-    h1 {
-      font-size: 1.6rem;
-      margin-bottom: 20px;
-      color: #ff4d6d;
-    }
+#recuadro2 {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(255,182,193,0.4);
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
 
-    .buttons {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      margin-top: 10px;
-      position: relative;
-    }
+#recuadro2 h1 {
+  margin: 0;
+  font-size: 2em;
+  font-weight: bold;
+}
 
-    button {
-      border: none;
-      padding: 12px 22px;
-      border-radius: 999px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: 0.25s ease;
-    }
+#recuadro2 p {
+  margin: 10px 0;
+  font-size: 1.2em;
+}
 
-    #yes {
-      background: #ff4d6d;
-      color: white;
-    }
+#cajaPregunta {
+  background: rgba(255,255,255,0.2);
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+}
 
-    #no {
-      background: #ccc;
-      color: #333;
-      position: absolute;
-    }
+#recuadro3 {
+  background: rgba(255,192,203,0.2);
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+}
 
-    .hidden {
-      display: none;
-    }
+#recuadro3 button {
+  padding: 10px 20px;
+  margin: 5px;
+  font-size: 1em;
+}
 
-    img {
-      width: 180px;
-      margin-top: 15px;
-    }
-  </style>
+#btnYes {
+  background: black;
+  color: white;
+  border: none;
+}
+
+#btnNo {
+  background: white;
+  color: black;
+  border: none;
+}
+
+#texto5 {
+  margin-top: 10px;
+  font-size: 0.9em;
+}
+
+/* Corazones */
+.heart {
+  position: fixed;
+  top: -30px;
+  font-size: 1.5em;
+  color: red;
+  animation: fall 1.5s linear forwards;
+}
+
+@keyframes fall {
+  to { transform: translateY(110vh); opacity: 0; }
+}
+
+/* Pantalla final */
+#final {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
+  background: rgba(255,255,255,0.5);
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+#final h1 {
+  margin: 0;
+  font-size: 2em;
+  color: red;
+}
+
+#final p {
+  margin: 10px 0;
+  font-size: 1.2em;
+}
+
+#final img {
+  width: 200px;
+  margin-top: 10px;
+}
+</style>
 </head>
 
 <body>
-  <div class="card" id="card">
-    <h1>¿Quieres ser mi San Valentín? 💖</h1>
 
-    <div class="buttons">
-      <button id="yes">Sí</button>
-      <button id="no">No</button>
-    </div>
+<div id="recuadro2">
+  <h1>Hola corazón 💌🦦</h1>
+  <p>Te tengo una pregunta...</p>
 
-    <div id="result" class="hidden">
-      <h1>Sabía que dirías que sí 💘</h1>
-      <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="love gif" />
-    </div>
+  <div id="cajaPregunta">
+    ¿Quieres ser mi San Valentín? No acepto un no por respuesta...
   </div>
 
-  <script>
-    const yesBtn = document.getElementById('yes');
-    const noBtn = document.getElementById('no');
-    const result = document.getElementById('result');
+  <div id="recuadro3">
+    <button id="btnYes">Sí 🫰🏻</button>
+    <button id="btnNo">No</button>
+  </div>
 
-    let scale = 1;
+  <p id="texto5">Elige bien (no tienes opción)</p>
+</div>
 
-    noBtn.addEventListener('click', () => {
-      scale += 0.2;
-      yesBtn.style.transform = `scale(${scale})`;
+<script>
+// Corazones cayendo
+window.onload = function() {
+  for (let i = 0; i < 20; i++) {
+    let heart = document.createElement('div');
+    heart.className = 'heart';
+    heart.innerText = '❤';
+    heart.style.left = Math.random() * 100 + '%';
+    heart.style.animationDelay = (Math.random() * 1.5) + 's';
+    document.body.appendChild(heart);
+  }
 
-      const x = Math.random() * (window.innerWidth - 100);
-      const y = Math.random() * (window.innerHeight - 100);
+  setTimeout(() => {
+    document.querySelectorAll('.heart').forEach(h => h.remove());
+  }, 1500);
+};
 
-      noBtn.style.left = x + 'px';
-      noBtn.style.top = y + 'px';
-    });
+// Botones
+let noCount = 0;
+const btnYes = document.getElementById('btnYes');
+const btnNo = document.getElementById('btnNo');
+const texto5 = document.getElementById('texto5');
 
-    yesBtn.addEventListener('click', () => {
-      document.querySelector('.buttons').classList.add('hidden');
-      result.classList.remove('hidden');
-    });
-  </script>
+const phrases = [
+  "Di que sí",
+  "Por favor dale a sí",
+  "Sabemos que quieres darle un sí",
+  "Si le das a sí te doy una mordida",
+  "¡Ándale canelita chapopote!",
+  "Ya casi darás a sí",
+  "Yo sé que sí quieres",
+  "Casi lo tienes",
+  "Mi corazón dice que sí",
+  "DARYAN DALE A SÍ NO SEAS TERCA"
+];
+
+btnNo.addEventListener('click', () => {
+  noCount++;
+
+  if (noCount <= 5) {
+    let scaleYes = 1 + noCount * 0.2;
+    let scaleNo = 1 - noCount * 0.2;
+
+    btnYes.style.transform = `scale(${scaleYes})`;
+    btnNo.style.transform = `scale(${scaleNo < 0 ? 0 : scaleNo})`;
+  } else {
+    let randScale = 1 + Math.random() * 3;
+    btnYes.style.transform = `scale(${randScale})`;
+    btnNo.style.transform = `scale(${1/randScale})`;
+
+    if (Math.random() < 0.5) {
+      let parent = btnYes.parentNode;
+      parent.insertBefore(btnNo, btnYes);
+    }
+  }
+
+  if (noCount <= 10) {
+    texto5.textContent = phrases[noCount - 1];
+  } else {
+    texto5.textContent = phrases[Math.floor(Math.random() * phrases.length)];
+  }
+});
+
+btnYes.addEventListener('click', () => {
+  document.getElementById('recuadro2').remove();
+
+  const final = document.createElement('div');
+  final.id = 'final';
+  final.innerHTML = `
+    <h1>Siiiii ❤️</h1>
+    <p>Sabía que dirías que sí, te quiero muchooo</p>
+    <img src="dance-klenza.gif" alt="Bailando">
+  `;
+
+  document.body.appendChild(final);
+});
+</script>
+
 </body>
 </html>
-
